Add lite proto rules for all protos.

--- a/src/main/java/com/techcubing/proto/BUILD
+++ b/src/main/java/com/techcubing/proto/BUILD
@@ -1,5 +1,7 @@
 package(default_visibility = ["//visibility:public"])
 
+# options.proto
+
 proto_library(
     name = "options_proto",
     srcs = ["options.proto"],
@@ -7,11 +9,16 @@ proto_library(
         "@com_google_protobuf//:descriptor_proto",
     ],
 )
-
 java_proto_library(
     name = "options_java_proto",
     deps = [":options_proto"],
 )
+java_lite_proto_library(
+    name = "options_java_lite_proto",
+    deps = [":options_proto"],
+)
+
+# device.proto
 
 proto_library(
     name = "device_proto",
@@ -22,26 +29,31 @@ proto_library(
         "@com_google_protobuf//:timestamp_proto",
     ],
 )
-
 java_proto_library(
     name = "device_java_proto",
     deps = [":device_proto"],
 )
+java_lite_proto_library(
+    name = "device_java_lite_proto",
+    deps = [":device_proto"],
+)
+
+#device_type.proto
 
 proto_library(
     name = "device_type_proto",
     srcs = ["device_type.proto"],
 )
-
 java_proto_library(
     name = "device_type_java_proto",
     deps = [":device_type_proto"],
 )
-
 java_lite_proto_library(
     name = "device_type_java_lite_proto",
     deps = [":device_type_proto"],
 )
+
+# device_config.proto
 
 proto_library(
     name = "device_config_proto",
@@ -51,37 +63,47 @@ proto_library(
         "//src/main/java/com/techcubing/proto/wcif:competition_proto",
     ],
 )
-
 java_proto_library(
     name = "device_config_java_proto",
     deps = [":device_config_proto"],
 )
-
 java_lite_proto_library(
     name = "device_config_java_lite_proto",
     deps = [":device_config_proto"],
 )
+
+# request_context.proto
 
 proto_library(
     name = "request_context_proto",
     srcs = ["request_context.proto"],
     deps = [":options_proto"],
 )
-
 java_proto_library(
     name = "request_context_java_proto",
     deps = [":request_context_proto"],
 )
+java_lite_proto_library(
+    name = "request_context_java_lite_proto",
+    deps = [":request_context_proto"],
+)
+
+# response_context.proto
 
 proto_library(
     name = "response_context_proto",
     srcs = ["response_context.proto"],
 )
-
 java_proto_library(
     name = "response_context_java_proto",
     deps = [":response_context_proto"],
 )
+java_lite_proto_library(
+    name = "response_context_java_lite_proto",
+    deps = [":response_context_proto"],
+)
+
+# scorecard.proto
 
 proto_library(
     name = "scorecard_proto",
@@ -92,8 +114,11 @@ proto_library(
         "@com_google_protobuf//:timestamp_proto",
     ],
 )
-
 java_proto_library(
     name = "scorecard_java_proto",
+    deps = [":scorecard_proto"],
+)
+java_lite_proto_library(
+    name = "scorecard_java_lite_proto",
     deps = [":scorecard_proto"],
 )
