--- a/src/main/java/com/techcubing/proto/services/BUILD
+++ b/src/main/java/com/techcubing/proto/services/BUILD
@@ -2,6 +2,8 @@ package(default_visibility = ["//visibility:public"])
 
 load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")
 
+# TechCubing Service
+
 proto_library(
     name = "techcubing_service_proto",
     srcs = ["techcubing_service.proto"],
@@ -18,6 +20,11 @@ java_proto_library(
     deps = [":techcubing_service_proto"],
 )
 
+java_lite_proto_library(
+    name = "techcubing_service_java_lite_proto",
+    deps = [":techcubing_service_proto"],
+)
+
 java_grpc_library(
     name = "techcubing_service_java_grpc",
     srcs = [":techcubing_service_proto"],
@@ -30,6 +37,21 @@ java_grpc_library(
     ],
 )
 
+java_grpc_library(
+    name = "techcubing_service_java_lite_grpc",
+    srcs = [":techcubing_service_proto"],
+    flavor = "lite",
+    deps = [
+        ":acquire_scorecard_java_lite_proto",
+        ":get_by_id_java_lite_proto",
+        ":list_persons_java_lite_proto",
+        ":release_scorecard_java_lite_proto",
+        ":techcubing_service_java_lite_proto",
+    ],
+)
+
+# ListPersons
+
 proto_library(
     name = "list_persons_proto",
     srcs = ["list_persons.proto"],
@@ -39,11 +61,16 @@ proto_library(
         "//src/main/java/com/techcubing/proto/wcif:person_proto",
     ],
 )
-
 java_proto_library(
     name = "list_persons_java_proto",
     deps = [":list_persons_proto"],
 )
+java_lite_proto_library(
+    name = "list_persons_java_lite_proto",
+    deps = [":list_persons_proto"],
+)
+
+# GetById
 
 proto_library(
     name = "get_by_id_proto",
@@ -54,11 +81,16 @@ proto_library(
         "@com_google_protobuf//:any_proto",
     ],
 )
-
 java_proto_library(
     name = "get_by_id_java_proto",
     deps = [":get_by_id_proto"],
 )
+java_lite_proto_library(
+    name = "get_by_id_java_lite_proto",
+    deps = [":get_by_id_proto"],
+)
+
+# AcquireScorecard
 
 proto_library(
     name = "acquire_scorecard_proto",
@@ -70,11 +102,16 @@ proto_library(
         "//src/main/java/com/techcubing/proto:scorecard_proto",
     ],
 )
-
 java_proto_library(
     name = "acquire_scorecard_java_proto",
     deps = [":acquire_scorecard_proto"],
 )
+java_lite_proto_library(
+    name = "acquire_scorecard_java_lite_proto",
+    deps = [":acquire_scorecard_proto"],
+)
+
+# ReleaseScorecard
 
 proto_library(
     name = "release_scorecard_proto",
@@ -86,8 +123,11 @@ proto_library(
         "//src/main/java/com/techcubing/proto:scorecard_proto",
     ],
 )
-
 java_proto_library(
     name = "release_scorecard_java_proto",
+    deps = [":release_scorecard_proto"],
+)
+java_lite_proto_library(
+    name = "release_scorecard_java_lite_proto",
     deps = [":release_scorecard_proto"],
 )
