Move proto lite targets into a single library.

--- a/src/main/java/com/techcubing/proto/BUILD
+++ b/src/main/java/com/techcubing/proto/BUILD
@@ -1,4 +1,7 @@
-package(default_visibility = ["//visibility:public"])
+package(default_visibility = [
+    "//src/main/java/com/techcubing/proto/services:__subpackages__",
+    "//src/main/java/com/techcubing/server:__subpackages__",
+])
 
 # options.proto
 
@@ -8,13 +11,13 @@ proto_library(
     deps = [
         "@com_google_protobuf//:descriptor_proto",
     ],
+    # Proto options are allowed to be set in WCIF.
+    visibility = [
+        "//src/main/java/com/techcubing/proto:__subpackages__",
+    ],
 )
 java_proto_library(
     name = "options_java_proto",
-    deps = [":options_proto"],
-)
-java_lite_proto_library(
-    name = "options_java_lite_proto",
     deps = [":options_proto"],
 )
 
@@ -33,12 +36,8 @@ java_proto_library(
     name = "device_java_proto",
     deps = [":device_proto"],
 )
-java_lite_proto_library(
-    name = "device_java_lite_proto",
-    deps = [":device_proto"],
-)
 
-#device_type.proto
+# device_type.proto
 
 proto_library(
     name = "device_type_proto",
@@ -46,10 +45,6 @@ proto_library(
 )
 java_proto_library(
     name = "device_type_java_proto",
-    deps = [":device_type_proto"],
-)
-java_lite_proto_library(
-    name = "device_type_java_lite_proto",
     deps = [":device_type_proto"],
 )
 
@@ -67,10 +62,6 @@ java_proto_library(
     name = "device_config_java_proto",
     deps = [":device_config_proto"],
 )
-java_lite_proto_library(
-    name = "device_config_java_lite_proto",
-    deps = [":device_config_proto"],
-)
 
 # request_context.proto
 
@@ -83,10 +74,6 @@ java_proto_library(
     name = "request_context_java_proto",
     deps = [":request_context_proto"],
 )
-java_lite_proto_library(
-    name = "request_context_java_lite_proto",
-    deps = [":request_context_proto"],
-)
 
 # response_context.proto
 
@@ -96,10 +83,6 @@ proto_library(
 )
 java_proto_library(
     name = "response_context_java_proto",
-    deps = [":response_context_proto"],
-)
-java_lite_proto_library(
-    name = "response_context_java_lite_proto",
     deps = [":response_context_proto"],
 )
 
@@ -118,7 +101,20 @@ java_proto_library(
     name = "scorecard_java_proto",
     deps = [":scorecard_proto"],
 )
+
+# lite proto library for android
+
 java_lite_proto_library(
-    name = "scorecard_java_lite_proto",
-    deps = [":scorecard_proto"],
+    name = "lite",
+    deps = [
+        ":device_config_proto",
+        ":device_proto",
+        ":device_type_proto",
+        ":request_context_proto",
+        ":response_context_proto",
+        ":scorecard_proto",
+    ],
+    visibility = [
+        "//src/main/java/com/techcubing/android:__subpackages__",
+    ],
 )
