Move the proto directory higher out of j/c/t.

--- a/src/main/java/com/techcubing/server/framework/BUILD
+++ b/src/main/java/com/techcubing/server/framework/BUILD
@@ -21,12 +21,12 @@ java_library(
         ":MysqlConnection",
         ":ProtoRegistry",
         ":ServerState",
-        "//src/main/java/com/techcubing/proto:device_java_proto",
-        "//src/main/java/com/techcubing/proto:scorecard_java_proto",
-        "//src/main/java/com/techcubing/proto/wcif:competition_java_proto",
-        "//src/main/java/com/techcubing/proto/wcif:event_java_proto",
-        "//src/main/java/com/techcubing/proto/wcif:person_java_proto",
-        "//src/main/java/com/techcubing/proto/wcif:round_java_proto",
+        "//src/main/proto:device_java_proto",
+        "//src/main/proto:scorecard_java_proto",
+        "//src/main/proto/wcif:competition_java_proto",
+        "//src/main/proto/wcif:event_java_proto",
+        "//src/main/proto/wcif:person_java_proto",
+        "//src/main/proto/wcif:round_java_proto",
         "@com_android_tools_ddms_ddmlib//jar",
         "@org_freemarker_freemarker//jar",
     ],
@@ -54,7 +54,7 @@ java_library(
     deps = [
         ":MysqlConnection",
         ":ServerState",
-        "//src/main/java/com/techcubing/proto:options_java_proto",
+        "//src/main/proto:options_java_proto",
         "//src/main/java/com/techcubing/server/util:ProtoUtil",
         "@com_google_protobuf//:protobuf_java",
     ],
@@ -66,10 +66,10 @@ java_library(
     deps = [
         ":ProtoDb",
         ":ServerState",
-        "//src/main/java/com/techcubing/proto:scorecard_java_proto",
-        "//src/main/java/com/techcubing/proto/wcif:event_java_proto",
-        "//src/main/java/com/techcubing/proto/wcif:person_java_proto",
-        "//src/main/java/com/techcubing/proto/wcif:round_java_proto",
+        "//src/main/proto:scorecard_java_proto",
+        "//src/main/proto/wcif:event_java_proto",
+        "//src/main/proto/wcif:person_java_proto",
+        "//src/main/proto/wcif:round_java_proto",
         "//src/main/java/com/techcubing/server/util:ProtoUtil",
         "//src/main/java/com/techcubing/server/util:WcifUtil",
         "@com_google_protobuf//:protobuf_java",
