--- a/src/main/java/com/techcubing/server/services/BUILD
+++ b/src/main/java/com/techcubing/server/services/BUILD
@@ -7,12 +7,12 @@ java_library(
         ":GetByIdImpl",
         ":ListPersonsImpl",
         ":ReleaseScorecardImpl",
-        "//src/main/java/com/techcubing/proto/services:acquire_scorecard_java_proto",
-        "//src/main/java/com/techcubing/proto/services:get_by_id_java_proto",
-        "//src/main/java/com/techcubing/proto/services:list_persons_java_proto",
-        "//src/main/java/com/techcubing/proto/services:release_scorecard_java_proto",
-        "//src/main/java/com/techcubing/proto/services:techcubing_service_java_grpc",
-        "//src/main/java/com/techcubing/proto/services:techcubing_service_java_proto",
+        "//src/main/proto/services:acquire_scorecard_java_proto",
+        "//src/main/proto/services:get_by_id_java_proto",
+        "//src/main/proto/services:list_persons_java_proto",
+        "//src/main/proto/services:release_scorecard_java_proto",
+        "//src/main/proto/services:techcubing_service_java_grpc",
+        "//src/main/proto/services:techcubing_service_java_proto",
         "//src/main/java/com/techcubing/server/framework:ServerState",
         "@io_grpc_grpc_java//stub",
     ],
@@ -22,8 +22,8 @@ java_library(
     name = "ListPersonsImpl",
     srcs = ["ListPersonsImpl.java"],
     deps = [
-        "//src/main/java/com/techcubing/proto/services:list_persons_java_proto",
-        "//src/main/java/com/techcubing/proto/wcif:person_java_proto",
+        "//src/main/proto/services:list_persons_java_proto",
+        "//src/main/proto/wcif:person_java_proto",
         "//src/main/java/com/techcubing/server/framework:ProtoDb",
         "//src/main/java/com/techcubing/server/framework:ServerState",
         "@com_google_protobuf//:protobuf_java",
@@ -34,7 +34,7 @@ java_library(
     name = "GetByIdImpl",
     srcs = ["GetByIdImpl.java"],
     deps = [
-        "//src/main/java/com/techcubing/proto/services:get_by_id_java_proto",
+        "//src/main/proto/services:get_by_id_java_proto",
         "//src/main/java/com/techcubing/server/framework:ProtoDb",
         "//src/main/java/com/techcubing/server/framework:ServerState",
         "@com_google_protobuf//:protobuf_java",
@@ -45,11 +45,11 @@ java_library(
     name = "AcquireScorecardImpl",
     srcs = ["AcquireScorecardImpl.java"],
     deps = [
-        "//src/main/java/com/techcubing/proto:device_java_proto",
-        "//src/main/java/com/techcubing/proto:device_type_java_proto",
-        "//src/main/java/com/techcubing/proto:scorecard_java_proto",
-        "//src/main/java/com/techcubing/proto/services:acquire_scorecard_java_proto",
-        "//src/main/java/com/techcubing/proto/wcif:round_java_proto",
+        "//src/main/proto:device_java_proto",
+        "//src/main/proto:device_type_java_proto",
+        "//src/main/proto:scorecard_java_proto",
+        "//src/main/proto/services:acquire_scorecard_java_proto",
+        "//src/main/proto/wcif:round_java_proto",
         "//src/main/java/com/techcubing/server/framework:ProtoDb",
         "//src/main/java/com/techcubing/server/framework:ServerState",
         "//src/main/java/com/techcubing/server/util:WcifUtil",
@@ -61,10 +61,10 @@ java_library(
     name = "ReleaseScorecardImpl",
     srcs = ["ReleaseScorecardImpl.java"],
     deps = [
-        "//src/main/java/com/techcubing/proto:device_java_proto",
-        "//src/main/java/com/techcubing/proto:device_type_java_proto",
-        "//src/main/java/com/techcubing/proto:scorecard_java_proto",
-        "//src/main/java/com/techcubing/proto/services:release_scorecard_java_proto",
+        "//src/main/proto:device_java_proto",
+        "//src/main/proto:device_type_java_proto",
+        "//src/main/proto:scorecard_java_proto",
+        "//src/main/proto/services:release_scorecard_java_proto",
         "//src/main/java/com/techcubing/server/framework:ProtoDb",
         "//src/main/java/com/techcubing/server/framework:ServerState",
         "@com_google_protobuf//:protobuf_java",
