--- a/src/main/proto/wcif/BUILD
+++ b/src/main/proto/wcif/BUILD
@@ -1,5 +1,5 @@
 package(default_visibility = [
-    "//src/main/java/com/techcubing/proto:__subpackages__",
+    "//src/main/proto:__subpackages__",
     "//src/main/java/com/techcubing/server:__subpackages__",
 ])
 
@@ -9,7 +9,7 @@ proto_library(
     name = "person_proto",
     srcs = ["person.proto"],
     deps = [
-        "//src/main/java/com/techcubing/proto:options_proto",
+        "//src/main/proto:options_proto",
     ],
 )
 java_proto_library(
@@ -23,9 +23,9 @@ proto_library(
     name = "competition_proto",
     srcs = ["competition.proto"],
     deps = [
-        "//src/main/java/com/techcubing/proto:options_proto",
-        "//src/main/java/com/techcubing/proto/wcif:event_proto",
-        "//src/main/java/com/techcubing/proto/wcif:person_proto",
+        "//src/main/proto:options_proto",
+        "//src/main/proto/wcif:event_proto",
+        "//src/main/proto/wcif:person_proto",
     ],
 )
 java_proto_library(
@@ -39,8 +39,8 @@ proto_library(
     name = "event_proto",
     srcs = ["event.proto"],
     deps = [
-        "//src/main/java/com/techcubing/proto:options_proto",
-        "//src/main/java/com/techcubing/proto/wcif:round_proto",
+        "//src/main/proto:options_proto",
+        "//src/main/proto/wcif:round_proto",
     ],
 )
 java_proto_library(
@@ -54,7 +54,7 @@ proto_library(
     name = "round_proto",
     srcs = ["round.proto"],
     deps = [
-        "//src/main/java/com/techcubing/proto:options_proto",
+        "//src/main/proto:options_proto",
     ],
 )
 java_proto_library(
