Add an android studio gradle project.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,12 @@ bazel-server
 bazel-testlogs
 *.swp
 *.swo
-local.properties
-.idea
-.project
+*.iml
+.gradle
+/local.properties
+/.idea/workspace.xml
+/.idea/libraries
+.DS_Store
+/build
+/captures
+.externalNativeBuild
