Ignore the .idea and .project directories.
These just contain metadata about android studio, not anything that
needs to be version controlled.

--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,8 @@ bazel-testlogs
 *.iml
 .gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
+/.idea/
+/.project/
 .DS_Store
 /build
 /captures
