--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ bazel-bin
 bazel-genfiles
 bazel-out
 bazel-server
+bazel-techcubing
 bazel-testlogs
 *.swp
 *.swo
@@ -9,12 +10,13 @@ bazel-testlogs
 
 # Android studio files
 .gradle
-/local.properties
-/.idea/
-/.project/
-/gradle/
+local.properties
+.idea/
+.project/
+gradle/
 .DS_Store
 /build
 /captures
 .externalNativeBuild
-/gradlew
+gradlew
+gradlew.bat
