--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 protobuf {
@@ -46,7 +50,7 @@ android {
                 exclude '**/bazel-out/**'
                 exclude '**/bazel-server/**'
                 exclude '**/bazel-techcubing/**'
-                exclude '**/extracted-include-protos/**'
+                exclude '**/build/**'
                 exclude '**/third_party/**'
             }
         }
@@ -56,11 +60,15 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-
-    implementation 'com.google.protobuf:protobuf-java:3.5.1'
+    api 'com.google.protobuf:protobuf-lite:3.0.1'
+    api 'com.google.firebase:firebase-core:16.0.3'
+    api 'com.google.firebase:firebase-ml-vision:17.0.0'
+    api 'com.wonderkiln:camerakit:0.13.1'
     implementation 'io.grpc:grpc-okhttp:1.14.0'
     implementation 'io.grpc:grpc-protobuf-lite:1.14.0'
     implementation 'io.grpc:grpc-stub:1.14.0'
+    api 'javax.annotation:javax.annotation-api:1.3.2'
+    //protobuf 'com.google.protobuf:protobuf-java:3.5.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
