--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.techcubing.android">
 
+    <uses-sdk
+        android:minSdkVersion="15"
+        android:targetSdkVersion="27" />
+
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,13 +16,36 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+
+        <activity android:name=".activities.SetupActivity">
+            <intent-filter>
+                <action android:name="com.techcubing.SETUP_APP" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".activities.LobbyActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activities.BarcodeScannerActivity"/>
+        <activity android:name=".activities.AcquireScorecardActivity">
+            <intent-filter>
+                <action android:name="com.techcubing.SCAN_BARCODE"/>
+                <category android:name="android.intent.category.DEFAULT" />
+                <data android:scheme="techcubing"
+                      android:host="scorecard"/>
+            </intent-filter>
+        </activity>
+        <activity android:name=".activities.ReleaseScorecardActivity"/>
+        <activity android:name=".activities.JudgeActivity"/>
+        <activity android:name=".activities.ScrambleActivity"/>
+        <meta-data
+            android:name="com.google.firebase.ml.vision.DEPENDENCIES"
+            android:value="barcode" />
+
     </application>
 
 </manifest>
