--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.techcubing.android"
-        minSdkVersion 15
+        minSdkVersion 23
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -64,11 +64,11 @@ dependencies {
     api 'com.google.firebase:firebase-core:16.0.3'
     api 'com.google.firebase:firebase-ml-vision:17.0.0'
     api 'com.wonderkiln:camerakit:0.13.1'
+    implementation 'io.grpc:grpc-android:1.14.0'
     implementation 'io.grpc:grpc-okhttp:1.14.0'
     implementation 'io.grpc:grpc-protobuf-lite:1.14.0'
     implementation 'io.grpc:grpc-stub:1.14.0'
     api 'javax.annotation:javax.annotation-api:1.3.2'
-    //protobuf 'com.google.protobuf:protobuf-java:3.5.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
