--- a/src/main/java/com/techcubing/server/BUILD
+++ b/src/main/java/com/techcubing/server/BUILD
@@ -10,6 +10,7 @@ java_binary(
         "//src/main/java/com/techcubing/server/framework:ServerState",
         "//src/main/java/com/techcubing/server/framework:ServerStateInitializer",
         "//src/main/java/com/techcubing/server/handlers:AddDeviceHandler",
+        "//src/main/java/com/techcubing/server/handlers:AddScramblesHandler",
         "//src/main/java/com/techcubing/server/handlers:CompetitionsHandler",
         "//src/main/java/com/techcubing/server/handlers:DeleteDeviceHandler",
         "//src/main/java/com/techcubing/server/handlers:IndexHandler",
