Add skewb scrambles.

--- a/src/main/java/com/techcubing/server/util/BUILD
+++ b/src/main/java/com/techcubing/server/util/BUILD
@@ -37,5 +37,6 @@ java_library(
         "CubePuzzle.java",
         "Puzzle.java",
         "PyraminxPuzzle.java",
+        "SkewbPuzzle.java",
     ],
 )
