Add sq1 scrambles.

--- a/src/main/java/com/techcubing/server/util/BUILD
+++ b/src/main/java/com/techcubing/server/util/BUILD
@@ -40,5 +40,6 @@ java_library(
         "Puzzle.java",
         "PyraminxPuzzle.java",
         "SkewbPuzzle.java",
+        "Sq1Puzzle.java",
     ],
 )
