Add a command line tool to execute a scramble.

--- a/src/main/java/com/techcubing/server/util/BUILD
+++ b/src/main/java/com/techcubing/server/util/BUILD
@@ -43,3 +43,13 @@ java_library(
         "Sq1Puzzle.java",
     ],
 )
+
+java_binary(
+    name = "Scramble",
+    srcs = ["ScrambleMain.java"],
+    main_class = "com.techcubing.server.util.ScrambleMain",
+    deps = [
+        ":Puzzle",
+    ],
+)
+
